[iOS] WebKit services should inherit environment variables for home https://bugs.webkit.org/show_bug.cgi?id=144078 rdar://problem/20571678

Reviewed by Dan Bernstein.

Source/WebCore:

Added an SPI header for a drive-by fix.

* WebCore.xcodeproj/project.pbxproj:
* platform/spi/cf/CFBundleSPI.h: Added.

Source/WebKit2:

Pass current environment variables as XPC bootstrap. Also while at it, made
_CFBundleSetupXPCBootstrap not soft linked.

* Shared/EntryPointUtilities/mac/XPCService/XPCServiceMain.mm:
(main):
* UIProcess/Launcher/mac/ProcessLauncherMac.mm:
(WebKit::connectToService):

Source/WTF:

* wtf/spi/darwin/XPCSPI.h: Added xpc_copy_bootstrap and xpc_dictionary_apply.



Canonical link: https://commits.webkit.org/162085@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183209 268f45cc-cd09-0410-ab3c-d52691b4dbfc