Source/WebKit2/Shared/EntryPointUtilities/mac/XPCService/XPCServiceMain.mm
@@ -77,6 +77,15 @@ using namespace WebKit;
 
 int main(int argc, char** argv)
 {
+#if PLATFORM(IOS)
+    auto bootstrap = adoptOSObject(xpc_copy_bootstrap());
+    auto containerEnvironmentVariables = xpc_dictionary_get_value(bootstrap.get(), "ContainerEnvironmentVariables");
+    xpc_dictionary_apply(containerEnvironmentVariables, ^(const char *key, xpc_object_t value) {
+        setenv(key, xpc_string_get_string_ptr(value), 1);
+        return true;
+    });
+#endif
+
     xpc_main(XPCServiceEventHandler);
     return 0;
 }
